--- a/notebooks/Healthcare_ETL_Project.ipynb
+++ b/notebooks/Healthcare_ETL_Project.ipynb
@@ -2,152 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0589f23c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a17d4999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/Users/avinashmacbookair/Documents/TREND_Health_Partners_3/Healthcare_ETL_Project/raw_data/healthcare_treatments_csv_1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74f02056",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Countries: ['India']\n",
+      "Unique States: ['Karnataka' 'Punjab' 'Maharashtra' 'Haryana' 'Uttar Pradesh']\n",
+      "Unique Cities: ['Mysore' 'Bangalore' 'Amritsar' 'Pune' 'Faridabad' 'Varanasi' 'Mangalore']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_countries = df['country'].dropna().unique()\n",
+    "unique_states = df['state'].dropna().unique()\n",
+    "unique_cities = df['city'].dropna().unique()\n",
     "\n",
     "\n",
-    "        \n",
-    "\n",
-    "# Define mappings\n",
-    "state_mapping = {\n",
-    "    'Haryana': 'Washington',\n",
-    "    'Karnataka': 'California',\n",
-    "    'Madhya Pradesh': 'Michigan',\n",
-    "    'Maharashtra': 'Massachusetts',\n",
-    "    'Punjab': 'New Jersey',\n",
-    "    'Rajasthan': 'Florida',\n",
-    "    'Tamil Nadu': 'Texas',\n",
-    "    'Uttar Pradesh': 'New York',\n",
-    "    'West Bengal': 'Illinois'\n",
-    "}\n",
-    "\n",
-    "city_mapping = {\n",
-    "    'Faridabad': 'Seattle',\n",
-    "    'Mysore': 'San Francisco',\n",
-    "    'Bangalore': 'Los Angeles',\n",
-    "    'Mangalore': 'San Diego',\n",
-    "    'Gwalior': 'Detroit',\n",
-    "    'Pune': 'Boston',\n",
-    "    'Amritsar': 'Jersey City',\n",
-    "    'Chandigarh': 'Newark',\n",
-    "    'Jaipur': 'Miami',\n",
-    "    'Madurai': 'Houston',\n",
-    "    'Varanasi': 'New York City',\n",
-    "    'Lucknow': 'Buffalo',\n",
-    "    'Darjeeling': 'Chicago'\n",
-    "}\n",
-    "\n",
-    "country_mapping = {\n",
-    "    'India': 'United States'   \n",
-    "}\n",
-    "\n",
-    "hospital_mapping = {\n",
-    "    'AIIMS': 'Mayo Clinic',\n",
-    "    'Kokilaben Hospital': 'Cleveland Clinic',\n",
-    "    'Global Hospitals': 'Johns Hopkins Hospital',\n",
-    "    'Narayana Health': 'Massachusetts General Hospital',\n",
-    "    'Columbia Asia': 'Mount Sinai Hospital',\n",
-    "    'Care Hospitals': 'St. Jude Children\\'s Research Hospital',\n",
-    "    'Manipal Hospital': 'UCLA Medical Center',\n",
-    "    'Tata Memorial Hospital': 'Memorial Sloan Kettering Cancer Center',\n",
-    "    'BLK Super Speciality Hospital': 'Cedars-Sinai Medical Center',\n",
-    "    'Wockhardt Hospitals': 'New York-Presbyterian Hospital',\n",
-    "    'Fortis Hospital': 'Washington University in St. Louis Medical Center'\n",
-    "}\n",
-    "\n",
-    "# Function to apply mappings to the data\n",
-    "def apply_mappings(df):\n",
-    "    df['state'] = df['state'].replace(state_mapping)\n",
-    "    df['city'] = df['city'].replace(city_mapping)\n",
-    "    df['country'] = df['country'].replace(country_mapping)\n",
-    "    return df\n",
-    "\n",
-    "def apply_hospital_mapping(df):\n",
-    "    df['affiliated_hospital'] = df['affiliated_hospital'].map(hospital_mapping).fillna(df['affiliated_hospital'])\n",
-    "    return df\n",
-    "\n",
-    "# Function to convert treatment costs to USD\n",
-    "def convert_cost(df, exchange_rate=85):\n",
-    "    df['treatment_cost'] = df['treatment_cost'] / exchange_rate\n",
-    "    df['treatment_cost'] = df['treatment_cost'].round(2)\n",
-    "    return df\n",
-    "\n",
-    "# Function to load and process the file\n",
-    "def load_and_process_file(file_path):\n",
-    "    # Load CSV file into a DataFrame\n",
-    "    df = pd.read_csv(file_path)\n",
-    "\n",
-    "    # Apply mappings and transformations\n",
-    "    df = apply_mappings(df)\n",
-    "    df = apply_hospital_mapping(df)\n",
-    "    df = convert_cost(df)\n",
-    "    \n",
-    "    return df\n",
-    "    \n",
-    "# Function to save the processed DataFrame to a CSV file\n",
+    "print(\"Unique Countries:\", unique_countries)\n",
+    "print(\"Unique States:\", unique_states)\n",
+    "print(\"Unique Cities:\", unique_cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8e01d4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Treatment Types: ['pharmacological' 'surgical' 'preventive' 'therapeutic']\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "\n",
-    "# Function to mark a file as processed\n",
-    "def mark_file_processed(file_path, metadata_file=\"processed_files.txt\"):\n",
-    "    with open(metadata_file, \"a\") as f:\n",
-    "        f.write(f\"{file_path.name}\\n\")\n",
+    "unique_treatments = df['treatment_type'].dropna().unique()\n",
     "\n",
-    "# Main ETL Function (can be triggered from the script)\n",
-    "def run_etl():\n",
-    "    # Directory setup for raw data and processed data\n",
-    "    BASE_DIR = Path(__file__).resolve().parent.parent  # Ensure you are in the right directory\n",
-    "    RAW_DATA_DIR = BASE_DIR / \"Healthcare_ETL_Project\" / \"raw_data\"\n",
-    "    PROCESSED_DIR = BASE_DIR / \"Healthcare_ETL_Project\" / \"processed\"\n",
-    "    PROCESSED_FILE = PROCESSED_DIR / \"Healthcare_Dataset.csv\"\n",
+    "print(\"Unique Treatment Types:\", unique_treatments)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d2a2f137",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Speciality Names: ['Radiology' 'Cardiology' 'Nephrology' 'Psychiatry' 'Urology' 'Oncology'\n",
+      " 'Dermatology' 'Pediatrics']\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "    # Function to check if a file is already processed (by storing in a metadata file or similar)\n",
-    "    processed_files = set()\n",
+    "unique_specialities = df['speciality_name'].dropna().unique()\n",
     "\n",
-    "    # Try to load already processed files from metadata (if exists)\n",
-    "    processed_metadata_file = BASE_DIR / \"processed_files.txt\"\n",
-    "    if processed_metadata_file.exists():\n",
-    "        with open(processed_metadata_file, \"r\") as f:\n",
-    "            processed_files = set(f.read().splitlines())\n",
+    "print(\"Unique Speciality Names:\", unique_specialities)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ff4de92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Affiliated Hospitals: ['AIIMS' 'Kokilaben Hospital' 'Global Hospitals' 'Narayana Health'\n",
+      " 'Columbia Asia' 'Care Hospitals' 'Manipal Hospital']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_hospitals = df['affiliated_hospital'].dropna().unique()\n",
     "\n",
-    "    # Iterate through each file in the raw data directory\n",
-    "    for file_path in RAW_DATA_DIR.glob(\"*.csv\"):\n",
-    "        if file_path.name in processed_files:\n",
-    "            print(f\"Skipping already processed file: {file_path.name}\")\n",
-    "            continue\n",
-    "\n",
-    "        print(f\"Processing file: {file_path.name}\")\n",
-    "        \n",
-    "        # Load and process the file\n",
-    "        df = load_and_process_file(file_path)\n",
-    "        \n",
-    "        # Ensure processed directory exists\n",
-    "        PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "        # If the processed CSV already exists, append data to it, otherwise create a new file\n",
-    "        if PROCESSED_FILE.exists():\n",
-    "            df.to_csv(PROCESSED_FILE, mode='a', header=False, index=False)\n",
-    "        else:\n",
-    "            df.to_csv(PROCESSED_FILE, index=False)\n",
-    "\n",
-    "        # Mark this file as processed\n",
-    "        mark_file_processed(file_path)\n",
-    "\n",
-    "        print(f\"File {file_path.name} processed and saved.\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Run the ETL process\n",
-    "    run_etl()\n",
-    "    print(\"ETL process completed.\")\n",
-    "        \n",
-    "\n",
-    "\n"
+    "print(\"Unique Affiliated Hospitals:\", unique_hospitals)"
    ]
   },
   {
