--- a/notebooks/query_db.ipynb
+++ b/notebooks/query_db.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "08e512c6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "7ad87065",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "b8f1f2cc",
    "metadata": {},
    "outputs": [
@@ -79,18 +79,18 @@
      "output_type": "stream",
      "text": [
       "+----------------+--------------+-------------------+----------------+-------------------+----------------------+----------+-----------------------+-----------------+--------------+---------------+---------------+--------------+---------------+------------------------+-------------------+\n",
-      "|   Treatment_ID | Start_Date   | Completion_Date   | Outcome_Date   | Outcome_Quarter   |   Treatment_Duration |     Cost |   Effectiveness_Score | Type            |   Patient_ID |   Provider_ID |   Location_ID |   Disease_ID | Outcome_Day   |   Outcome_Weekend_Flag | Report_Duration   |\n",
+      "|   Treatment_ID | Start_Date   | Completion_Date   | Outcome_Date   |   Outcome_Quarter |   Treatment_Duration |     Cost |   Effectiveness_Score | Type            |   Patient_ID |   Provider_ID |   Location_ID |   Disease_ID | Outcome_Day   |   Outcome_Weekend_Flag |   Report_Duration |\n",
       "|----------------+--------------+-------------------+----------------+-------------------+----------------------+----------+-----------------------+-----------------+--------------+---------------+---------------+--------------+---------------+------------------------+-------------------|\n",
-      "|              1 |              |                   |                |                   |                    7 | 46489.7  |                     5 | pharmacological |            3 |             1 |             8 |           38 |               |                      0 |                   |\n",
-      "|              2 |              |                   |                |                   |                    4 | 29150.1  |                     5 | surgical        |            9 |             1 |             8 |           36 |               |                      0 |                   |\n",
-      "|              3 |              |                   |                |                   |                    3 | 34554.7  |                     5 | pharmacological |           30 |             1 |             8 |           37 |               |                      0 |                   |\n",
-      "|              4 |              |                   |                |                   |                    7 | 24743.6  |                     5 | surgical        |           31 |             1 |             8 |           40 |               |                      0 |                   |\n",
-      "|              5 |              |                   |                |                   |                    4 |  8095.13 |                     5 | preventive      |           33 |             1 |             8 |           37 |               |                      0 |                   |\n",
-      "|              6 |              |                   |                |                   |                    4 | 25180.2  |                     5 | surgical        |           45 |             1 |             8 |           38 |               |                      0 |                   |\n",
-      "|              7 |              |                   |                |                   |                    3 | 44049.9  |                     5 | therapeutic     |           62 |             1 |             8 |           39 |               |                      0 |                   |\n",
-      "|              8 |              |                   |                |                   |                    5 | 48399.2  |                     5 | preventive      |           65 |             1 |             8 |           39 |               |                      0 |                   |\n",
-      "|              9 |              |                   |                |                   |                    7 |  7368.46 |                     5 | preventive      |           70 |             1 |             8 |           39 |               |                      0 |                   |\n",
-      "|             10 |              |                   |                |                   |                    2 |  9851.86 |                     5 | preventive      |           86 |             1 |             8 |           38 |               |                      0 |                   |\n",
+      "|              1 | 2024-01-01   | 2024-01-08        | 2024-01-12     |                 1 |                    7 | 46489.7  |                     2 | pharmacological |            3 |             1 |             1 |           38 | Friday        |                      0 |                 4 |\n",
+      "|              2 | 2024-01-01   | 2024-01-05        | 2024-01-07     |                 1 |                    4 | 29150.1  |                     3 | surgical        |            9 |             1 |             1 |           36 | Sunday        |                      1 |                 2 |\n",
+      "|              3 | 2024-01-01   | 2024-01-04        | 2024-01-10     |                 1 |                    3 | 34554.7  |                     0 | pharmacological |           30 |             1 |             1 |           37 | Wednesday     |                      0 |                 6 |\n",
+      "|              4 | 2024-01-01   | 2024-01-08        | 2024-01-15     |                 1 |                    7 | 24743.6  |                     1 | surgical        |           31 |             1 |             1 |           40 | Monday        |                      0 |                 7 |\n",
+      "|              5 | 2024-01-01   | 2024-01-05        | 2024-01-12     |                 1 |                    4 |  8095.13 |                     4 | preventive      |           33 |             1 |             1 |           37 | Friday        |                      0 |                 7 |\n",
+      "|              6 | 2024-01-01   | 2024-01-05        | 2024-01-07     |                 1 |                    4 | 25180.2  |                     2 | surgical        |           45 |             1 |             1 |           38 | Sunday        |                      1 |                 2 |\n",
+      "|              7 | 2024-01-01   | 2024-01-04        | 2024-01-07     |                 1 |                    3 | 44049.9  |                   nan | therapeutic     |           62 |             1 |             1 |           39 | Sunday        |                      1 |                 3 |\n",
+      "|              8 | 2024-01-01   | 2024-01-06        | 2024-01-08     |                 1 |                    5 | 48399.2  |                     1 | preventive      |           65 |             1 |             1 |           39 | Monday        |                      0 |                 2 |\n",
+      "|              9 | 2024-01-01   | 2024-01-08        | 2024-01-11     |                 1 |                    7 |  7368.46 |                   nan | preventive      |           70 |             1 |             1 |           39 | Thursday      |                      0 |                 3 |\n",
+      "|             10 | 2024-01-01   | 2024-01-03        | 2024-01-07     |                 1 |                    2 |  9851.86 |                   nan | preventive      |           86 |             1 |             1 |           38 | Sunday        |                      1 |                 4 |\n",
       "+----------------+--------------+-------------------+----------------+-------------------+----------------------+----------+-----------------------+-----------------+--------------+---------------+---------------+--------------+---------------+------------------------+-------------------+\n"
      ]
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "61342c29",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
     "SET Affiliated_Hospital = 'Stark Hospitals'\n",
     "WHERE Provider_ID = 1 AND Is_Current = 1\n",
     "\"\"\")\n",
-    "#cursor.execute(update_query)\n",
+    "\n",
     "conn.commit()\n",
     "\n",
     "df = pd.read_sql_query(\"SELECT * FROM PROVIDER WHERE Provider_ID = 1\", conn)\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7d82ecec",
    "metadata": {},
    "outputs": [
@@ -154,17 +154,16 @@
       "+-----------------+\n",
       "|   Total_Records |\n",
       "|-----------------|\n",
-      "|          700000 |\n",
+      "|          350000 |\n",
       "+-----------------+\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "query = \"SELECT Count(*) AS Total_Records FROM TREATMENT LIMIT 10;\"  # Adjust query as needed\n",
+    "query = \"SELECT Count(*) AS Total_Records FROM TREATMENT LIMIT 10;\"  \n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "b8e15fce",
    "metadata": {},
    "outputs": [
@@ -184,10 +183,10 @@
       "+-----------------+--------------------------+\n",
       "| Type            |   Avg_Treatment_Duration |\n",
       "|-----------------+--------------------------|\n",
-      "| pharmacological |                  4.49844 |\n",
-      "| preventive      |                  4.49704 |\n",
-      "| surgical        |                  4.50145 |\n",
-      "| therapeutic     |                  4.49539 |\n",
+      "| pharmacological |                  4.48511 |\n",
+      "| preventive      |                  4.49862 |\n",
+      "| surgical        |                  4.49565 |\n",
+      "| therapeutic     |                  4.49916 |\n",
       "+-----------------+--------------------------+\n"
      ]
     }
@@ -205,7 +204,6 @@
     "\"\"\"\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "be29ee22",
    "metadata": {},
    "outputs": [
@@ -225,13 +223,13 @@
       "+---------------+\n",
       "| Outcome_Day   |\n",
       "|---------------|\n",
-      "|               |\n",
+      "| Monday        |\n",
       "+---------------+\n"
      ]
     }
    ],
    "source": [
-    "# 2.Find the most common day of the week for treatments\n",
+    "# 2.Find the most common outcome day of the week for treatments\n",
     "query = \"\"\"\n",
     "WITH TreatmentDays AS (\n",
     "    SELECT Outcome_Day, \n",
@@ -246,7 +244,6 @@
     "\"\"\"\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -255,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "id": "d487b77b",
    "metadata": {},
    "outputs": [
@@ -273,14 +270,7 @@
       "|             5 |             46635 |    29707.4 |\n",
       "|             6 |             46521 |    29658.9 |\n",
       "|             7 |             46887 |    29715.4 |\n",
-      "|             8 |             46539 |    29551.2 |\n",
-      "|             9 |             47025 |    29773.5 |\n",
-      "|            10 |             46575 |    29697.7 |\n",
-      "|            11 |             46853 |    29725.9 |\n",
-      "|            12 |             46517 |    29677.5 |\n",
-      "|            13 |             46486 |    29708.7 |\n",
-      "|            14 |             46791 |    29857   |\n",
-      "|            15 |             46527 |    29658.7 |\n",
+      "|             8 |             23313 |    29529.2 |\n",
       "+---------------+-------------------+------------+\n"
      ]
     }
@@ -299,7 +289,6 @@
     "\"\"\"\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "a1f82d8f",
    "metadata": {},
    "outputs": [
@@ -325,13 +314,7 @@
       "|   2024 |      04 | 29,765.95      |\n",
       "|   2024 |      05 | 29,646.44      |\n",
       "|   2024 |      06 | 29,716.85      |\n",
-      "|   2024 |      07 | 29,607.27      |\n",
-      "|   2024 |      08 | 29,791.32      |\n",
-      "|   2024 |      09 | 29,643.35      |\n",
-      "|   2024 |      10 | 29,718.34      |\n",
-      "|   2024 |      11 | 29,755.17      |\n",
-      "|   2024 |      12 | 29,747.11      |\n",
-      "|   2025 |      01 | 29,656.47      |\n",
+      "|   2024 |      07 | 29,516.85      |\n",
       "+--------+---------+----------------+\n"
      ]
     }
@@ -354,10 +337,9 @@
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Format the Total_Cost column to show full precision with commas\n",
+    "# Format the Average_Cost column to show full precision with commas\n",
     "df['Average_Cost'] = df['Average_Cost'].apply(lambda x: '{:,.2f}'.format(x))\n",
     "\n",
-    "# Display the result\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -366,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0c9921dc",
    "metadata": {},
    "outputs": [
@@ -399,7 +381,6 @@
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -408,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "db9636c0",
    "metadata": {},
    "outputs": [
@@ -437,7 +418,6 @@
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -446,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "dd06725a",
    "metadata": {},
    "outputs": [
@@ -479,7 +459,6 @@
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -488,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "4c4f113b",
    "metadata": {},
    "outputs": [
@@ -577,7 +556,6 @@
     "\"\"\"\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -586,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5b906769",
    "metadata": {},
    "outputs": [
@@ -627,7 +605,6 @@
     "# Apply formatting to the Total_Cost column if needed\n",
     "df['Total_Cost'] = df['Total_Cost'].apply(lambda x: '{:,.2f}'.format(x))\n",
     "\n",
-    "# Display the result as a nicely formatted table\n",
     "if not df.empty:\n",
     "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
     "else:\n",
@@ -636,12 +613,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5a16577d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn.close()  # Close the connection after all queries are done"
+    "conn.close() "
    ]
   }
  ],
