--- a/notebooks/query_db.ipynb
+++ b/notebooks/query_db.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "08e512c6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "7ad87065",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "b8f1f2cc",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "61342c29",
    "metadata": {},
    "outputs": [
@@ -117,12 +117,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+---------------+--------------+-------------+-----------------+-------------------+-----------------------+---------------------+---------------------+--------------+\n",
-      "|   Version_ID |   Provider_ID | First_Name   | Last_Name   |   Speciality_Id | Speciality_Name   | Affiliated_Hospital   | Valid_From          | Valid_To            |   Is_Current |\n",
-      "|--------------+---------------+--------------+-------------+-----------------+-------------------+-----------------------+---------------------+---------------------+--------------|\n",
-      "|            1 |             1 | Nandini      | Srivastava  |               8 | Radiology         | Mayo Clinic           | 2025-04-26          | 2025-04-27 12:20:26 |            0 |\n",
-      "|           10 |             1 | Nandini      | Srivastava  |               8 | Radiology         | Stark Hospitals       | 2025-04-27 12:20:26 |                     |            1 |\n",
-      "+--------------+---------------+--------------+-------------+-----------------+-------------------+-----------------------+---------------------+---------------------+--------------+\n"
+      "+--------------+---------------+--------------+-------------+-----------------+-------------------+---------------------------------------+---------------------+---------------------+--------------+\n",
+      "|   Version_ID |   Provider_ID | First_Name   | Last_Name   |   Speciality_Id | Speciality_Name   | Affiliated_Hospital                   | Valid_From          | Valid_To            |   Is_Current |\n",
+      "|--------------+---------------+--------------+-------------+-----------------+-------------------+---------------------------------------+---------------------+---------------------+--------------|\n",
+      "|            1 |             1 | Nandini      | Srivastava  |               8 | Radiology         | Mayo Clinic                           | 2025-04-29          |                     |            1 |\n",
+      "|            2 |             2 | Aashi        | Devi        |               1 | Cardiology        | Cleveland Clinic                      | 2025-04-29          |                     |            1 |\n",
+      "|            3 |             3 | Madhavi      | Ahluwalia   |              12 | Nephrology        | Johns Hopkins Hospital                | 2025-04-29          |                     |            1 |\n",
+      "|            4 |             4 | Priya        | Menon       |               9 | Psychiatry        | Massachusetts General Hospital        | 2025-04-29          |                     |            1 |\n",
+      "|            5 |             5 | Rudra        | Gandhi      |              11 | Urology           | Mount Sinai Hospital                  | 2025-04-29          | 2025-04-29 16:16:17 |            0 |\n",
+      "|            6 |             6 | Leela        | Jha         |               7 | Oncology          | St. Jude Children's Research Hospital | 2025-04-29          | 2025-04-29 16:16:17 |            0 |\n",
+      "|            7 |             7 | Pratibha     | Yadav       |               5 | Dermatology       | UCLA Medical Center                   | 2025-04-29          | 2025-04-29 16:16:17 |            0 |\n",
+      "|            8 |             8 | Sarika       | Zutshi      |               4 | Pediatrics        | Mayo Clinic                           | 2025-04-29          | 2025-04-29 16:16:17 |            0 |\n",
+      "|            9 |             5 | Rudra        | Gandhi      |              11 | Urology           | New York-Presbyterian Hospital        | 2025-04-29 16:16:17 |                     |            1 |\n",
+      "|           10 |             6 | Leela        | Jha         |               7 | Oncology          | Cleveland Clinic                      | 2025-04-29 16:16:17 |                     |            1 |\n",
+      "|           11 |             7 | Pratibha     | Yadav       |               5 | Dermatology       | Johns Hopkins Hospital                | 2025-04-29 16:16:17 |                     |            1 |\n",
+      "|           12 |             8 | Sarika       | Zutshi      |               4 | Pediatrics        | Massachusetts General Hospital        | 2025-04-29 16:16:17 |                     |            1 |\n",
+      "+--------------+---------------+--------------+-------------+-----------------+-------------------+---------------------------------------+---------------------+---------------------+--------------+\n"
      ]
     }
    ],
@@ -130,20 +140,39 @@
     "cursor = conn.cursor()\n",
     "\n",
     "cursor.execute(\"\"\"\n",
-    "UPDATE PROVIDER\n",
-    "SET Affiliated_Hospital = 'Stark Hospitals'\n",
-    "WHERE Provider_ID = 1 AND Is_Current = 1\n",
+    "    UPDATE PROVIDER \n",
+    "    SET Affiliated_Hospital = 'New York-Presbyterian Hospital'\n",
+    "    WHERE Provider_ID = 5;\n",
     "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "    UPDATE PROVIDER \n",
+    "    SET Affiliated_Hospital = 'Cleveland Clinic'\n",
+    "    WHERE Provider_ID = 6;\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "    UPDATE PROVIDER \n",
+    "    SET Affiliated_Hospital = 'Johns Hopkins Hospital'\n",
+    "    WHERE Provider_ID = 7;\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "    UPDATE PROVIDER \n",
+    "    SET Affiliated_Hospital = 'Massachusetts General Hospital'\n",
+    "    WHERE Provider_ID = 8;\n",
+    "\"\"\")\n",
+    "\n",
     "\n",
     "conn.commit()\n",
     "\n",
-    "df = pd.read_sql_query(\"SELECT * FROM PROVIDER WHERE Provider_ID = 1\", conn)\n",
+    "df = pd.read_sql_query(\"SELECT * FROM PROVIDER\", conn)\n",
     "print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "7d82ecec",
    "metadata": {},
    "outputs": [
@@ -348,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0c9921dc",
    "metadata": {},
    "outputs": [
@@ -359,7 +388,7 @@
       "+----------------------------+\n",
       "|   doctors_changed_hospital |\n",
       "|----------------------------|\n",
-      "|                          0 |\n",
+      "|                          4 |\n",
       "+----------------------------+\n"
      ]
     }
@@ -389,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db9636c0",
    "metadata": {},
    "outputs": [
@@ -397,7 +426,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No data returned from the query.\n"
+      "+---------------+--------------+-------------+\n",
+      "|   Provider_ID | First_Name   | Last_Name   |\n",
+      "|---------------+--------------+-------------|\n",
+      "|             5 | Rudra        | Gandhi      |\n",
+      "|             6 | Leela        | Jha         |\n",
+      "|             7 | Pratibha     | Yadav       |\n",
+      "|             8 | Sarika       | Zutshi      |\n",
+      "+---------------+--------------+-------------+\n"
      ]
     }
    ],
@@ -614,6 +650,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce40ac92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+---------------------------+\n",
+      "| Type            |   Average_Report_Duration |\n",
+      "|-----------------+---------------------------|\n",
+      "| pharmacological |                      4.51 |\n",
+      "| preventive      |                      4.5  |\n",
+      "| surgical        |                      4.5  |\n",
+      "| therapeutic     |                      4.5  |\n",
+      "+-----------------+---------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10. Average_Duration of Report_Duration based on Treatment_Type\n",
+    "query = \"SELECT Type, ROUND(AVG(Report_Duration), 2) AS Average_Report_Duration FROM TREATMENT GROUP BY Type;\" \n",
+    "df = pd.read_sql_query(query, conn)\n",
+    "\n",
+    "# Display the result as a nicely formatted table\n",
+    "if not df.empty:\n",
+    "    print(tabulate(df, headers='keys', tablefmt='psql', showindex=False))\n",
+    "else:\n",
+    "    print(\"No data returned from the query.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "5a16577d",
    "metadata": {},
    "outputs": [],
